Our Value Spacing Fixed

--- a/src/Sass/components/_OurValue.scss
+++ b/src/Sass/components/_OurValue.scss
@@ -1,4 +1,5 @@
 .ourvalue {
+  margin: 10rem 0rem;
   position: relative;
   display: flex;
   align-items: center;
